# droid_data_collect

./: README.md  bag_record.sh  inference.sh  package.xml  setup.cfg  setup.py
config/: topics.yaml
droid_data_collect/: bag_record.py  button_bag_toggle.py  zed_bridge.py
launch/: bag_record.launch.py  subscriber.launch.py
resource/: droid_data_collect
